--- a/docs/md/effective-java/创建和销毁对象.md
+++ b/docs/md/effective-java/创建和销毁对象.md
@@ -121,3 +121,41 @@ public class Collections {
 #### 13. 谨慎成功重写clone方法
 
 - 不可变的类永远都不应该提供clone方法
+- clone方法实际上就是一个构造器，必须确保它不会伤害到原始的对象
+- 公有的clone方法应该省略throws声明
+- Cloneable架构与引用可变的final域的正常用法是不相兼容的
+- 对于拷贝更好的办法是提供一个拷贝构造器或者拷贝工厂
+ ```java
+ // Copy Constructor
+public Yum(Yum yum) {...}
+// Copy Factory
+public static Yum newInstance(Yum yum){...}
+ ```
+#### 14.考虑实现Comparable接口
+- 如果你编写明显具备内在排序关系的类(如 字母/数字/时间排序)，则应该实现Comparable接口
+- 避免在compareTo方法中使用< 和 > 关系操作符，应该基本类型的包装类中使用静态的compare方法，或者在Comparator接口使用比较器构造方法
+
+### 三、类和接口
+#### 15. 使类和成员的可访问性最小化
+- 尽可能使每个类或成员不被外界访问
+- 公有类的实例域不能是公有的
+- 除常量等公共静态final字段外，	公共类都不应该有公有字段，并且确保公有静态final字段所引用的对象是不可变的 
+
+#### 16. 要在公共类中使用访问方法而不是公共属性
+- 属性私有化，提供getter和setter方法
+
+#### 17. 使可变性最小化(不可变类)
+不可变类是线程安全的，不要求哦同步，可以被自由地共享如String，基本类型的包装类，BigInteger和BigDecimal
+1.不要提供任何会修改对象状态的方法(设值方法)
+2.保证类不会被扩扩展(即final关键字修饰类)
+3.声明的所有字段设置final
+4.声明的所有字段设置private
+5.确保对于任何可变组件的互斥访问
+```
+a.  非final修饰的字段不要从任何访问方法返回该对象引用(不提供getter方法)
+b.  implement Serializable接口需要提供readObject或者readResolve方法，或者使用java.io.ObjectInputStream#readUnshared和java.io.ObjectOutputStream#writeUnshared方法
+c.   如果类不能成为不可变类，则应尽量限制其可变性（如CountDownLatch类）
+d.  构造器应该创建完全初始化的对象，并建立所有的约束关系
+```
+
+#### 18 复合优于继承
