--- a/docs/md/effective-java/创建和销毁对象.md
+++ b/docs/md/effective-java/创建和销毁对象.md
@@ -125,32 +125,40 @@ public class Collections {
 - 公有的clone方法应该省略throws声明
 - Cloneable架构与引用可变的final域的正常用法是不相兼容的
 - 对于拷贝更好的办法是提供一个拷贝构造器或者拷贝工厂
- ```java
- // Copy Constructor
+
+```java
+// Copy Constructor
 public Yum(Yum yum) {...}
 // Copy Factory
 public static Yum newInstance(Yum yum){...}
- ```
+```
+
 #### 14.考虑实现Comparable接口
+
 - 如果你编写明显具备内在排序关系的类(如 字母/数字/时间排序)，则应该实现Comparable接口
 - 避免在compareTo方法中使用< 和 > 关系操作符，应该基本类型的包装类中使用静态的compare方法，或者在Comparator接口使用比较器构造方法
 
 ### 三、类和接口
+
 #### 15. 使类和成员的可访问性最小化
+
 - 尽可能使每个类或成员不被外界访问
 - 公有类的实例域不能是公有的
-- 除常量等公共静态final字段外，	公共类都不应该有公有字段，并且确保公有静态final字段所引用的对象是不可变的 
+- 除常量等公共静态final字段外，	公共类都不应该有公有字段，并且确保公有静态final字段所引用的对象是不可变的
 
 #### 16. 要在公共类中使用访问方法而不是公共属性
+
 - 属性私有化，提供getter和setter方法
 
 #### 17. 使可变性最小化(不可变类)
+
 不可变类是线程安全的，不要求哦同步，可以被自由地共享如String，基本类型的包装类，BigInteger和BigDecimal
 1.不要提供任何会修改对象状态的方法(设值方法)
 2.保证类不会被扩扩展(即final关键字修饰类)
 3.声明的所有字段设置final
 4.声明的所有字段设置private
 5.确保对于任何可变组件的互斥访问
+
 ```
 a.  非final修饰的字段不要从任何访问方法返回该对象引用(不提供getter方法)
 b.  implement Serializable接口需要提供readObject或者readResolve方法，或者使用java.io.ObjectInputStream#readUnshared和java.io.ObjectOutputStream#writeUnshared方法
@@ -158,4 +166,55 @@ c.   如果类不能成为不可变类，则应尽量限制其可变性（如Cou
 d.  构造器应该创建完全初始化的对象，并建立所有的约束关系
 ```
 
-#### 18 复合优于继承
+#### 18 组合优于继承
+- 装饰器模式（使用属性注入然后调用的方式，不直接使用继承）
+- 包装类不适用回调框架，被包装的对象并不知道它外面的包装对象，所以当它床底一个指向自身的引用（this），回调是避开了外面的包装对象，导致包装失效，引发SELF问题
+- 继承打破封装性，当子类完全需要用到父类的属性和方法时，才适合使用继承，否则建议使用组合
+
+#### 19 要么设计继承并提供文档说明，要么禁止继承
+- 可重写方法（public ,protected）尽量少调用可重写方法（）比如AbstractList.addAll调用了add方法，当子类重写add方法，父类的addAll的逻辑也会发生变化
+- 如果调用了可重写方法（即违法第一点）,则在注释中说明调用顺序以及方法（@implSpec注解）
+- 对于为了继承而设计的类，唯一的测试方法就是编写子类（非父类作者外的开发，三个子类足矣）
+- 构造器，clone方法，readObject方法，都不能直接或间接调用可被重写的方法
+
+#### 20 接口优于抽象类
+- 单继承（抽象类），多实现（接口）
+- 对接口提供一个抽象的骨架实现类（模板方法模式），如AbstractList, AbstractSet
+- 可以使用内部私有类扩展骨架实现类的方法，实现模拟多重继承
+
+#### 21 为后代设计接口
+- 避免向现有的接口添加新的缺省方法，java 8开始在接口编写缺省方法不会出现编译时报错或警告，运行时失败的情况，但方法在使用时，极易受影响，如：```java.util.Collection#removeIf```
+
+```java
+   default boolean removeIf(Predicate<? super E> filter) {
+        Objects.requireNonNull(filter);
+        boolean removed = false;
+        final Iterator<E> each = iterator();
+        while (each.hasNext()) {
+            if (filter.test(each.next())) {
+                each.remove();
+                removed = true;
+            }
+        }
+        return removed;
+    }
+```
+-  发布之前，应使用不少于三种实现来测试接口
+
+#### 22 接口只用于定义类型
+- 常量接口模式是对接口的不良使用，非final类实现常量接口，子类的命名空间会被污染（JDK反面教材java.io.ObjectStreamConstants），如：
+```java
+// 常量接口
+public interface Test{
+  static final double PI =3.14;
+}
+```
+
+- 接口应该只用来定义类型，而不是用来导出常量，用于其他地方的静态导入（static import）
+- 导出常量的合理反感
+  - 常量类
+  - 使用枚举类型
+  - 不可实例化的工具类（即私有构造方法）
+
+#### 23 类层次优于标签类
+
