--- a/docs/md/effective-java/创建和销毁对象.md
+++ b/docs/md/effective-java/创建和销毁对象.md
@@ -218,3 +218,23 @@ public interface Test{
 
 #### 23 类层次优于标签类
 
+- 不要在一个类中根据类型生成不同的类 ，比如一个类根据条件生成长方形类和正方形类
+
+  应该使用接口或者抽象类，生成长方形子类和正方形子类
+
+#### 24 静态成员类优于非静态成员类
+嵌套类有四种：静态成员类，非静态成员类，匿名类，局部类
+- 静态成员类：通常作为公有的辅助类 
+  - 如果声明成员类不要求访问外层实例，则始终在声明加上static修饰符，节省额外保存外层实例引用所消耗的时间和空间
+  
+- 非静态成员类：定义一个适配器，如Map的keySet,entrySet,values等使用非静态成员类实现集合的视图
+  - 非静态内部类可能会导致宿主类满足GC条件却无法被回收
+- 匿名类：动态创建小型函数对象和过程对象。如lambda表达式；另一种用法是在静态工厂方法的内部
+- 局部类：使用在“可以声明局部变量”的地方
+
+#### 25限制源文件为单个顶级类
+- 一个java文件一个类或接口（内部类不限）
+
+#### 26 请不要使用原生态类型
+    
+
